--- a/profil-der-datenzentren/index.html
+++ b/profil-der-datenzentren/index.html
@@ -91,7 +91,7 @@ var onepress_js_settings = {"onepress_disable_animation":"","onepress_disable_st
 </td>
 </tr>
 <tr>
-<td><a href="/austrian-centre-for-digital-humanities-acdh-oeaw/" rel="noopener">Austrian Centre for Digital Humanities &amp; Cultural Heritage (ACDH-CH)</a></td>
+<td><a href="patrickhelling.github.io/agdzdk/austrian-centre-for-digital-humanities-acdh-oeaw/" rel="noopener">Austrian Centre for Digital Humanities &amp; Cultural Heritage (ACDH-CH)</a></td>
 <td>Wien</td>
 </tr>
 <tr>
